cleaned up, added new chapters

--- a/document.tex
+++ b/document.tex
@@ -61,18 +61,23 @@
 \section{Introduction}
 \input{./chapters/introduction/introduction}
 
+\section{Approach}
+\input{./chapters/approach/approach}
+
 \clearpage
 \section{Implementation}
 \input{./chapters/implementation/implementation}
 
 \clearpage
-\section{Results}
-\label{sec:ergebnisse}
-\input{./chapters/results/results}
+\section{Case Study}
+\input{./chapters/casestudy/casestudy}
 
 \clearpage
 \section{Discussion}
 \input{./chapters/discussion/discussion}
+
+\section{Conclusion}
+\input{./chapters/conclusion/conclusion}
 
 %\section{Perspective}
 %\input{}
