--- a/zfibmcover.sty
+++ b/zfibmcover.sty
@@ -138,8 +138,8 @@ an der Georg-August-Universit\"at G\"ottingen}\\\medskip
 \vfill
 \noindent Georg-August-Universit\"at G\"ottingen\\
 Zentrum f\"ur Informatik\\[1ex]
-Lotzestra\ss e 16-18\\
-37083 G\"ottingen\\
+Goldschmidtstr. 7\\
+37077 G\"ottingen\\
 Germany\\[2ex]
 {
 \begin{tabular}{@{}ll}
