first sentences in introduction

--- a/document.tex
+++ b/document.tex
@@ -164,7 +164,7 @@
 %\input{./}
 
 \clearpage
-\addcontentsline{toc}{section}{Literature}
+%\addcontentsline{toc}{section}{Literature}
 \bibliographystyle{apalike}
 \bibliography{literature}
 
