--- a/document.tex
+++ b/document.tex
@@ -31,6 +31,10 @@
 \usepackage{multirow}
 \usepackage{color}
 \usepackage{babelbib}
+\usepackage{algpseudocode}
+\usepackage{algorithm}
+\usepackage{listings}
+
 \usepackage{setspace}
 \usepackage{booktabs}
 \usepackage{gensymb}
