restructuring, task distance substitution matrix

--- a/document.tex
+++ b/document.tex
@@ -33,6 +33,8 @@
 \usepackage{babelbib}
 \usepackage{algpseudocode}
 \usepackage{algorithm}
+\usepackage{shadethm}
+
 \usepackage{listings}
 
 \usepackage{setspace}
@@ -47,7 +49,7 @@
 \usepackage{etoolbox}
 \usepackage[master,institut]{zfibmcover}        % load cover
 \usepackage[sort]{natbib} % base bib style
-
+\usepackage{tikz}
 
 % The following package makes code look a little nicer, but it may not be present on all systems.
 \IfFileExists{cmtt.sty}{\usepackage[override]{cmtt}}{}% better typewriter font
@@ -74,8 +76,6 @@
 \setkomafont{pagehead}{\normalcolor\sffamily\small}% what about \itshape?
 
 \raggedbottom % Tanzender Fuss, tanzende fussnoten
-
-
 
 \renewcommand{\cite}{\citep*}% change citation default command
 \newcommand{\cites}{\citet*}% use for citation in sentence
@@ -113,6 +113,15 @@
 %use (a) for numbering subsections
 %\renewcommand*\thesubsection{(\alph{subsection})}
 
+\newshadetheorem{definitions}{Definition}[chapter]
+
+\newenvironment{definition}[1][]{%
+  \definecolor{shadethmcolor}{rgb}{.9,.9,.95}%
+  \definecolor{shaderulecolor}{rgb}{0.0,0.0,0.4}%
+  \setlength{\shadeboxrule}{1.5pt}%
+  \begin{definitions}\hspace*{1mm}%
+}{\end{definitions}}
+
 \begin{document}
 
 \Number{2014-01} % enter here the actual year and number of your thesis. 
@@ -142,24 +151,31 @@
 
 \clearpage
 \chapter{Introduction}
+\label{chap:introduction}
 \input{./chapters/introduction/introduction}
 
+\clearpage
+\chapter{Foundations}
+\label{chap:foundations}
+\input{./chapters/foundations/foundations}
+
 \chapter{Approach}
+\label{chap:approach}
 \input{./chapters/approach/approach}
 
 \clearpage
 \chapter{Implementation}
+\label{chap:implementation}
 \input{./chapters/implementation/implementation}
 
 \clearpage
 \chapter{Case Study}
+\label{chap:casestudy}
 \input{./chapters/casestudy/casestudy}
 
-\clearpage
-\chapter{Discussion}
-\input{./chapters/discussion/discussion}
 
 \chapter{Conclusion}
+\label{chap:conclusion}
 \input{./chapters/conclusion/conclusion}
 
 %\section{Perspective}
