--- a/document.tex
+++ b/document.tex
@@ -48,7 +48,7 @@
 \usepackage{adjustbox}
 \usepackage{etoolbox}
 \usepackage[master,institut]{zfibmcover}        % load cover
-\usepackage[sort]{natbib} % base bib style
+\usepackage[sort,numbers]{natbib} % base bib style
 \usepackage{tikz}
 
 % The following package makes code look a little nicer, but it may not be present on all systems.
@@ -80,7 +80,7 @@
 \renewcommand{\cite}{\citep*}% change citation default command
 \newcommand{\cites}{\citet*}% use for citation in sentence
 
-\bibpunct{(}{)}{;}{a}{}{,~} % configure citation style
+%\bibpunct{(}{)}{;}{a}{}{,~} % configure citation style
 
 \bibfont{\small} % smaller font for bibliography
 
