--- a/literature.bib
+++ b/literature.bib
@@ -12,3 +12,10 @@
   Timestamp                = {2014.03.22}
 }
 
+@article {Dictionary.com2014,
+    title = {The American Heritage® Science Dictionary},
+    month = {Sep},
+    day = {10},
+    year = {2014},
+    url = {http://dictionary.reference.com/browse/gui},
+}
