--- a/document.tex
+++ b/document.tex
@@ -50,6 +50,7 @@
 \usepackage[master,institut]{zfibmcover}        % load cover
 \usepackage[sort,numbers]{natbib} % base bib style
 \usepackage{tikz}
+\usetikzlibrary{trees}
 
 % The following package makes code look a little nicer, but it may not be present on all systems.
 \IfFileExists{cmtt.sty}{\usepackage[override]{cmtt}}{}% better typewriter font
