--- a/document.tex
+++ b/document.tex
@@ -37,6 +37,8 @@
 
 \usepackage{listings}
 
+\usepackage{caption}
+\usepackage{subcaption}
 \usepackage{setspace}
 \usepackage{booktabs}
 \usepackage{gensymb}
