--- a/literature.bib
+++ b/literature.bib
@@ -2,7 +2,18 @@
 % Encoding: UTF-8
 
 
-@Article{Harms2013,
+@Book{durbin1998,
+  Title                    = {Biological sequence analysis},
+  Author                   = {R. Durbin and S.Eddy and A.Krogh and G. Mitchison},
+  Editor                   = {Cambridge University Press},
+  Publisher                = {Cambridge University Press},
+  Year                     = {1998},
+
+  Owner                    = {milk},
+  Timestamp                = {2014.09.14}
+}
+
+@Article{harms2013,
   Title                    = {Platform-independent Trace-based Task Tree Generation},
   Author                   = {Harms,Patrick and Herbold,Steffen and Grabowski,Jens},
   Journal                  = {Noch keines},
@@ -12,10 +23,26 @@
   Timestamp                = {2014.03.22}
 }
 
-@article {Dictionary.com2014,
-    title = {The American Heritage® Science Dictionary},
-    month = {Sep},
-    day = {10},
-    year = {2014},
-    url = {http://dictionary.reference.com/browse/gui},
+@Article{needleman1970,
+  Title                    = {A general method applicable to search for similarities in the amino acid sequence of two proteins.},
+  Author                   = {S.B. Needleman and C.D. Wunsch},
+  Journal                  = {Journal of Molecular Biology},
+  Year                     = {1970},
+  Pages                    = {443-453},
+  Volume                   = {48},
+
+  Owner                    = {milk},
+  Timestamp                = {2014.09.14}
 }
+
+@Article{waterman1981,
+  Title                    = {Identification of Common Molecular Subsequences},
+  Author                   = {Smith, Temple F.; and Waterman, Michael S.},
+  Journal                  = {Journal of Molecular Biology},
+  Year                     = {1981},
+  Pages                    = {195-197},
+  Volume                   = {147},
+  Owner                    = {milk},
+  Timestamp                = {2014.09.14}
+}
+
