alot of new stuff

--- a/document.tex
+++ b/document.tex
@@ -37,7 +37,7 @@
 
 \usepackage{listings}
 
-\usepackage{caption}
+%\usepackage{caption}
 \usepackage{subcaption}
 \usepackage{setspace}
 \usepackage{booktabs}
@@ -69,7 +69,7 @@
 % caption font settings
 
 \setkomafont{captionlabel}{\itshape\usekomafont{section}\footnotesize}
-\setkomafont{caption}{\normalfont\scriptsize}
+\setkomafont{caption}{\normalfont\footnotesize}
 
 % Keine Serifenlose fuer description-Umgebungen
 %
