--- a/literature.bib
+++ b/literature.bib
@@ -46,3 +46,12 @@
   Timestamp                = {2014.09.14}
 }
 
+@Book{bellman1957,
+  author =       "Bellman, Richard",
+  title =        "Dynamic Programming",
+  publisher =    "Princeton University Press",
+  year =         "1957",
+  address =   "Princeton, NJ, USA",
+  edition =   "1",
+  bib2html_rescat = "General RL",
+}
