--- a/document.tex
+++ b/document.tex
@@ -34,6 +34,7 @@
 \usepackage{algpseudocode}
 \usepackage{algorithm}
 \usepackage{shadethm}
+\usepackage{tabularx}
 
 \usepackage{listings}
 
@@ -136,7 +137,7 @@
 \begin{document}
 
 \Number{2014-01} % enter here the actual year and number of your thesis. 
-\Title{Improving automatic task tree generation with alignment algorithms}
+\Title{Improving automatic task tree \mbox{generation} with alignment algorithms}
 \Authors{Ralph Krimmel}
 %\DepartmentType{}% use only if it is not "Lehrstuhl" or "Institut"
 \Department{Institut f\"ur Informatik}
