--- a/literature.bib
+++ b/literature.bib
@@ -2,6 +2,18 @@
 % Encoding: UTF-8
 
 
+@Book{bellman1957,
+  Title                    = {Dynamic Programming},
+  Author                   = {Bellman, Richard},
+  Publisher                = {Princeton University Press},
+  Year                     = {1957},
+
+  Address                  = {Princeton, NJ, USA},
+  Edition                  = {1},
+
+  Bib2html_rescat          = {General RL}
+}
+
 @Book{durbin1998,
   Title                    = {Biological sequence analysis},
   Author                   = {R. Durbin and S.Eddy and A.Krogh and G. Mitchison},
@@ -23,6 +35,15 @@
   Timestamp                = {2014.03.22}
 }
 
+@Article{herbold2013,
+  Title                    = {AutoQUEST - Automated Quality Engineering of Event-driven Software},
+  Author                   = {S. Herbold and P. Harms},
+  Year                     = {2013},
+
+  Owner                    = {milk},
+  Timestamp                = {2014.09.21}
+}
+
 @Article{needleman1970,
   Title                    = {A general method applicable to search for similarities in the amino acid sequence of two proteins.},
   Author                   = {S.B. Needleman and C.D. Wunsch},
@@ -42,16 +63,8 @@
   Year                     = {1981},
   Pages                    = {195-197},
   Volume                   = {147},
+
   Owner                    = {milk},
   Timestamp                = {2014.09.14}
 }
 
-@Book{bellman1957,
-  author =       "Bellman, Richard",
-  title =        "Dynamic Programming",
-  publisher =    "Princeton University Press",
-  year =         "1957",
-  address =   "Princeton, NJ, USA",
-  edition =   "1",
-  bib2html_rescat = "General RL",
-}
