--- a/document.tex
+++ b/document.tex
@@ -140,7 +140,7 @@
 \Title{Improving automatic task tree \mbox{generation} with alignment algorithms}
 \Authors{Ralph Krimmel}
 %\DepartmentType{}% use only if it is not "Lehrstuhl" or "Institut"
-\Department{Institut f\"ur Informatik}
+\Department{Informatik}
 
 \Date{30.September 2014}
 
