--- a/document.tex
+++ b/document.tex
@@ -35,7 +35,7 @@
 \usepackage{algorithm}
 \usepackage{shadethm}
 \usepackage{tabularx}
-
+\usepackage{hyperref}
 \usepackage{listings}
 
 %\usepackage{caption}
@@ -155,7 +155,8 @@
 \pagestyle{headings}
 
 \tableofcontents
-
+\listoffigures
+\listoftables
 
 \pagenumbering{arabic}
 \setcounter{page}{3}
