--- a/literature.bib
+++ b/literature.bib
@@ -14,6 +14,20 @@
   Bib2html_rescat          = {General RL}
 }
 
+@Article{dayhoff1978,
+  Title                    = {A model of Evolutionary Change in Proteins.},
+  Author                   = {M.O. Dayhoff and R. Schwartz and B.C. Orcut},
+  Journal                  = {Atlas of protein sequence and structure},
+  Year                     = {1978},
+  Note                     = {ISBN: 0-912466-07-3},
+  Number                   = {3},
+  Pages                    = {S. 345-358},
+  Volume                   = {5.},
+
+  Owner                    = {milk},
+  Timestamp                = {2014.09.26}
+}
+
 @Book{durbin1998,
   Title                    = {Biological sequence analysis},
   Author                   = {R. Durbin and S.Eddy and A.Krogh and G. Mitchison},
