--- a/document.tex
+++ b/document.tex
@@ -204,6 +204,16 @@
 \bibliographystyle{apalike}
 \bibliography{literature}
 
+\newpage
+\chapter*{Acknowlegdement}
+
+I would like to offer my special thanks to ***
+Advice given by *** has been a great help in ***
+I am particularly grateful for the assistance given by ***
+Assistance provided by *** was greatly appreciated.
+I wish to acknowledge the help provided by ***
+Dr *** provided me with very valuable ***
+My special thanks are extended to the staff of *** company for ***
 
 
 \end{document}
