sarah korrektur und introduction

--- a/zfibmcover.sty
+++ b/zfibmcover.sty
@@ -107,7 +107,7 @@ Zentrum f\"ur Informatik
 \raggedleft
 \begin{tabular}{@{}lr@{}}
 ISSN & 1612-6793\\
-Nummer & ZFI-BM-\@Number\\
+Nummer & zai-msc-2014-19\\
 \end{tabular}
 \end{minipage}
 %\vskip 3cm
