--- a/literature.bib
+++ b/literature.bib
@@ -2,6 +2,26 @@
 % Encoding: UTF-8
 
 
+@InCollection{bandelloni2008,
+  Title                    = {Reverse Engineering Cross-Modal User Interfaces for Ubiquitous Environments},
+  Author                   = {Bandelloni, Renata and Paterno, Fabio and Santoro, Carmen},
+  Booktitle                = {Engineering Interactive Systems},
+  Publisher                = {Springer Berlin Heidelberg},
+  Year                     = {2008},
+  Editor                   = {Gulliksen, Jan and Harning, MortonBorup and Palanque, Philippe and van der Veer, GerritC. and Wesson, Janet},
+  Pages                    = {285-302},
+  Series                   = {Lecture Notes in Computer Science},
+  Volume                   = {4940},
+
+  Doi                      = {10.1007/978-3-540-92698-6_18},
+  ISBN                     = {978-3-540-92697-9},
+  Keywords                 = {Reverse Engineering; Cross-Modal User Interfaces; Model-based Approaches},
+  Language                 = {English},
+  Owner                    = {milk},
+  Timestamp                = {2014.09.29},
+  Url                      = {http://dx.doi.org/10.1007/978-3-540-92698-6_18}
+}
+
 @Book{bellman1957,
   Title                    = {Dynamic Programming},
   Author                   = {Bellman, Richard},
@@ -58,6 +78,26 @@
   Timestamp                = {2014.09.21}
 }
 
+@InProceedings{Hudson1999,
+  Title                    = {A Tool for Creating Predictive Performance Models from User Interface Demonstrations},
+  Author                   = {Hudson, Scott E. and John, Bonnie E. and Knudsen, Keith and Byrne, Michael D.},
+  Booktitle                = {Proceedings of the 12th Annual ACM Symposium on User Interface Software and Technology},
+  Year                     = {1999},
+
+  Address                  = {New York, NY, USA},
+  Pages                    = {93--102},
+  Publisher                = {ACM},
+  Series                   = {UIST '99},
+
+  Acmid                    = {322590},
+  Doi                      = {10.1145/320719.322590},
+  ISBN                     = {1-58113-075-9},
+  Keywords                 = {GOMS, event logs, task modeling, tool support for evaluation, toolkits},
+  Location                 = {Asheville, North Carolina, USA},
+  Numpages                 = {10},
+  Url                      = {http://doi.acm.org/10.1145/320719.322590}
+}
+
 @Article{needleman1970,
   Title                    = {A general method applicable to search for similarities in the amino acid sequence of two proteins.},
   Author                   = {S.B. Needleman and C.D. Wunsch},
@@ -68,6 +108,17 @@
 
   Owner                    = {milk},
   Timestamp                = {2014.09.14}
+}
+
+@Article{paterno2003,
+  Title                    = {ConcurTaskTrees: An Engineered Notation for Task Models},
+  Author                   = {Paterno, Fabio},
+  Journal                  = {The Handbook of Task Analysis for Human-Computer Interaction},
+  Year                     = {2003},
+  Pages                    = {483-503},
+
+  Owner                    = {milk},
+  Timestamp                = {2014.09.29}
 }
 
 @Article{waterman1981,
