--- a/document.tex
+++ b/document.tex
@@ -139,7 +139,7 @@
 \begin{document}
 
 \Number{2014-01} % enter here the actual year and number of your thesis.
-\Title{Improving automatic task tree \mbox{generation} with alignment algorithms}
+\Title{Improving Automatic Task Tree \mbox{Generation} With Alignment Algorithms}
 \Authors{Ralph Krimmel}
 %\DepartmentType{}% use only if it is not "Lehrstuhl" or "Institut"
 \Department{Informatik}
