--- a/literature.bib
+++ b/literature.bib
@@ -62,8 +62,10 @@
 @Article{harms2013,
   Title                    = {Platform-independent Trace-based Task Tree Generation},
   Author                   = {Harms,Patrick and Herbold,Steffen and Grabowski,Jens},
-  Journal                  = {Noch keines},
-  Year                     = {2013},
+  Journal                  = {Proceedings of the ACHI 2014, The Seventh International
+Conference on Advances in Computer-Human Interactions. Think-Mind},
+  Year                     = {2014},
+  Pages                    = {pp. 337-342.},
 
   Owner                    = {milk},
   Timestamp                = {2014.03.22}
