--- a/document.tex
+++ b/document.tex
@@ -38,7 +38,7 @@
 \usepackage{hyperref}
 \usepackage{listings}
 
-%\usepackage{caption}
+\usepackage{caption}
 \usepackage{subcaption}
 \usepackage{setspace}
 \usepackage{booktabs}
@@ -205,15 +205,10 @@
 \bibliography{literature}
 
 \newpage
-\chapter*{Acknowlegdement}
-
-I would like to offer my special thanks to ***
-Advice given by *** has been a great help in ***
-I am particularly grateful for the assistance given by ***
-Assistance provided by *** was greatly appreciated.
-I wish to acknowledge the help provided by ***
-Dr *** provided me with very valuable ***
-My special thanks are extended to the staff of *** company for ***
+\chapter*{Acknowledgements}
+I would like to offer my special thanks to Patrick Harms who guided me through this thesis.
+I also wish to acknowledge the proof reading done by Hanna Holderied, Christian M\"uller, Sarah Sch\"u\ss{}ler and Jonas Krimmel.
+Additionally my thanks are extended to my collegues Piotr Kasprzak and Daniel Adler of GWDG for supplying me with powerful hardware and programming advices.
 
 
 \end{document}
